fixed some duplicate classes, and issue where content was being overlapped by nav bar

--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -25,9 +25,11 @@ body {
 	height:100%;
 }
 
-
 #viewport{
+	position:absolute;
 	top:40px;
+    width: 100%;
+    overflow: hidden;
 }
 
 #view_1_content{
@@ -78,12 +80,6 @@ body {
 
 #view3{
 	background-color: #BF1F1F;
-}
-
-#viewport {
-    width: 100%;
-    overflow: hidden;
-	position: relative;
 }
 
 #slidecontainer {
